Feat: Direct MSAL Azure AD authentication (bypasses Supabase dashboard)

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,8 @@ VITE_STRIPE_PUBLISHABLE_KEY=your-stripe-publishable-key-here
 # Security Settings
 # Set to 'false' in production to hide demo login credentials
 VITE_SHOW_DEMO_CREDENTIALS=true
+
+# Azure AD (Entra ID) Configuration (Required for Microsoft SSO)
+# Get these from Azure Portal → App Registrations → Your App
+VITE_AZURE_CLIENT_ID=your-azure-client-id
+VITE_AZURE_TENANT_ID=your-azure-tenant-id
