Feat: Add Office 365 email notifications for all modules

--- a/.env.example
+++ b/.env.example
@@ -26,3 +26,8 @@ VITE_SHOW_DEMO_CREDENTIALS=true
 # Get these from Azure Portal → App Registrations → Your App
 VITE_AZURE_CLIENT_ID=your-azure-client-id
 VITE_AZURE_TENANT_ID=your-azure-tenant-id
+
+# Office 365 Email Notifications (Optional)
+# Requires Mail.Send permission in Azure App
+VITE_EMAIL_SENDER=noreply@yourcompany.com
+VITE_EMAIL_ENABLED=true
