fix: configure base path for local dev (/) and GitHub Pages build (/Disti-Supper-App/)

--- a/.env.example
+++ b/.env.example
@@ -28,6 +28,12 @@ VITE_AZURE_CLIENT_ID=your-azure-client-id
 VITE_AZURE_TENANT_ID=your-azure-tenant-id
 
 # Office 365 Email Notifications (Optional)
-# Requires Mail.Send permission in Azure App
-VITE_EMAIL_SENDER=noreply@yourcompany.com
+# Requires Mail.Send and Mail.Send.Shared permissions in Azure App
+# Using shared mailbox for sending notifications
+VITE_EMAIL_SENDER=noreply@usc.net.sa
+VITE_EMAIL_SENDER_NAME=DistributorHub Notifications
 VITE_EMAIL_ENABLED=true
+
+# Google reCAPTCHA v3 (Optional - for public registration)
+# Get keys from https://www.google.com/recaptcha/admin
+VITE_RECAPTCHA_SITE_KEY=your-recaptcha-site-key
