--- a/package.json
+++ b/package.json
@@ -64,8 +64,18 @@
     "test:run": "vitest run",
     "test:watch": "vitest --watch",
     "test:coverage": "vitest run --coverage",
+    "test:integration": "vitest run --config vitest.integration.config.js",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:a11y": "playwright test tests/a11y",
+    "test:visual": "percy exec -- playwright test tests/visual",
     "lint": "eslint src --ext .js,.jsx --report-unused-disable-directives --max-warnings 0",
-    "lint:fix": "eslint src --ext .js,.jsx --fix"
+    "lint:fix": "eslint src --ext .js,.jsx --fix",
+    "lint:security": "eslint src --ext .js,.jsx --plugin security",
+    "size": "size-limit",
+    "analyze": "vite-bundle-visualizer"
   },
   "eslintConfig": {
     "extends": [
@@ -86,6 +96,9 @@
     ]
   },
   "devDependencies": {
+    "@axe-core/playwright": "^4.11.0",
+    "@playwright/test": "^1.57.0",
+    "@size-limit/file": "^12.0.0",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/line-clamp": "^0.1.0",
@@ -99,13 +112,16 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-security": "^3.0.1",
     "jsdom": "^27.4.0",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
+    "size-limit": "^12.0.0",
     "tailwindcss": "3.4.6",
     "vite": "^5.4.21",
     "vite-tsconfig-paths": "3.6.0",
     "vitest": "^4.0.17",
-    "vitest-axe": "^0.1.0"
+    "vitest-axe": "^0.1.0",
+    "web-vitals": "^5.1.0"
   }
 }
