--- a/package.json
+++ b/package.json
@@ -113,7 +113,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.16",
     "eslint-plugin-security": "^3.0.1",
-    "jsdom": "^27.4.0",
+    "happy-dom": "^17.4.4",
     "msw": "^2.12.7",
     "postcss": "^8.5.6",
     "size-limit": "^12.0.0",
